--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ADA95Compiler.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.cup-11a.jar=libs\\cup-11a.jar
+file.reference.java-cup-11b-runtime.jar=libs\\java-cup-11b-runtime.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.cup-11a.jar}:\
+    ${file.reference.java-cup-11b-runtime.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
